--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>flow-java-adapter</artifactId>
+  <artifactId>flow-parent</artifactId>
+  <packaging>pom</packaging>
+  <modules>
+    <module>flow-adapter</module>
+    <module>flow-spring-plugin</module>
+    <module>flow-kafka-plugin</module>
+    <module>flow-runner</module>
+  </modules>
   <build>
     <plugins>
       <plugin>
@@ -18,6 +25,7 @@
           <execution>
             <configuration>
               <createDependencyReducedPom>false</createDependencyReducedPom>
+              <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar</outputFile>
               <transformers>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -45,29 +53,29 @@
     <dependency>
       <artifactId>jackson-databind</artifactId>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <version>${jackson.version}</version>
+      <version>2.20.1</version>
     </dependency>
     <dependency>
       <artifactId>picocli</artifactId>
       <groupId>info.picocli</groupId>
-      <version>${picocli.version}</version>
+      <version>4.7.7</version>
     </dependency>
     <dependency>
       <artifactId>snakeyaml</artifactId>
       <groupId>org.yaml</groupId>
-      <version>${snakeyaml.version}</version>
+      <version>2.5</version>
     </dependency>
     <!-- SLF4J API -->
     <dependency>
       <artifactId>slf4j-api</artifactId>
       <groupId>org.slf4j</groupId>
-      <version>${slf4j.version}</version>
+      <version>2.1.0-alpha1</version>
     </dependency>
     <!-- Logback Classic Implementation -->
     <dependency>
       <artifactId>logback-classic</artifactId>
       <groupId>ch.qos.logback</groupId>
-      <version>${logback.version}</version>
+      <version>1.5.20</version>
     </dependency>
     <!-- Logback Core -->
     <dependency>
@@ -78,18 +86,18 @@
   </dependencies>
   <groupId>com.flow</groupId>
   <modelVersion>4.0.0</modelVersion>
-  <name>Flow Java Adapter</name>
+  <name>Flow Java Parent</name>
   <properties>
-    <jackson.version>2.17.1</jackson.version>
+    <jackson.version>2.20.1</jackson.version>
     <javaparser.version>3.26.2</javaparser.version>
-    <logback.version>1.2.6</logback.version>
-    <main.class>com.flow.adapter.runner.Main</main.class>
+    <logback.version>1.5.20</logback.version>
+    <main.class>com.flow.runner.Main</main.class>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <picocli.version>4.7.5</picocli.version>
+    <picocli.version>4.7.7</picocli.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <slf4j.version>1.7.32</slf4j.version>
-    <snakeyaml.version>2.2</snakeyaml.version>
+    <slf4j.version>2.1.0-alpha1</slf4j.version>
+    <snakeyaml.version>2.5</snakeyaml.version>
   </properties>
   <version>0.3.0</version>
 </project>
